Quick fix for Form Error Label getting cut off
Added media query at 950px width to change position attribute of Error
label

--- a/app/assets/stylesheets/forms/_forms.css.sass
+++ b/app/assets/stylesheets/forms/_forms.css.sass
@@ -110,6 +110,10 @@ select
       background: $orange-light
       color: $white
 
+@media screen and (max-width: 950px)
+  .simple_form .error
+    position: initial
+
 @media screen and (max-width: 600px)
   #disclaimer
     max-width: none
